fixed navbar margins on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1095,6 +1095,7 @@ strong {
 
         .nav-right {
             height: 60px !important;
+            padding: 0px !important;
 
             li {
                 display: flex !important;
